--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nowlang",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "Now Programming Language",
   "main": "src/nowlang.js",
   "scripts": {
@@ -22,6 +22,9 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JSDevloop/Now-Language/issues"
+  },
+  "bin": {
+    "nwc": "src/nowlang.js"
   },
   "homepage": "https://github.com/JSDevloop/Now-Language#readme"
 }
