--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.4",
   "description": "Now Programming Language",
   "main": "src/nowlang.js",
+  "esversion":8,
   "scripts": {
     "test": "jshint src/nowlang.js"
   },
